force-app/main/default/objects/Opportunity_Product_Item__c/Opportunity_Product_Item__c.object-meta.xml
<CustomObject>
    <description>this is the product that hangs on the opportunity</description>
    <label>Opportunity Product Item</label>
    <nameField>
        <label>OpportunityProductItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>