force-app/main/default/objects/Opportunity_Product_Item__c/fields/Ad_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Sales_Type__c</fullName>
    <label>Ad Sales Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>