force-app/main/default/objects/Opportunity_Product_Item__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Commission</fullName>
            </value>
            <value>
                <fullName>Premium Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>