force-app/main/default/objects/Opportunity_Product_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Ad Sales field</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>