force-app/main/default/objects/Opportunity_Product_Item__c/fields/City_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>City_ZipCode__c</fullName>
    <description>for Premium placement</description>
    <label>Period / Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>