force-app/main/default/objects/Opportunity_Product_Item__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Ad Sales field</description>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>