force-app/main/default/objects/Opportunity_Product_Item__c/fields/Id_List_Price_Product__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Price_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>this is the relationship to the list product</description>
    <label>List Price Product</label>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Opportunity Product Items</relationshipLabel>
    <relationshipName>Opportunity_Product_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>