force-app/main/default/objects/Opportunity_Product_Item__c/fields/Installments__c.field-meta.xml
<CustomField>
    <fullName>Installments__c</fullName>
    <description>this attribute says in how many months the customer can pay for this products ( always in Months )</description>
    <label>Installments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>