force-app/main/default/objects/Opportunity_Product_Item__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>This holds the name of the product group</description>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>