force-app/main/default/objects/Opportunity_Product_Item__c/fields/Rabbat__c.field-meta.xml
<CustomField>
    <fullName>Rabbat__c</fullName>
    <description>This holds the percentage or the amount  for the product discount</description>
    <label>Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>