force-app/main/default/objects/Opportunity_Product_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Used in conjunction with products of type recurring fee</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>