force-app/main/default/objects/Opportunity_Product_Item__c/recordTypes/AT_Opportunity_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>AT_Opportunity_Product_Item</fullName>
    <active>true</active>
    <label>AT Opportunity Product Item</label>
</RecordType>