force-app/main/default/objects/Opportunity_Product_Item__c/recordTypes/CD_Opportunity_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>CD_Opportunity_Product_Item</fullName>
    <active>true</active>
    <label>CD Opportunity Product Item</label>
</RecordType>