force-app/main/default/objects/Opportunity_Product_Item__c/recordTypes/FI_Opportunity_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>FI_Opportunity_Product_Item</fullName>
    <active>true</active>
    <label>FI Opportunity Product Item</label>
</RecordType>