force-app/main/default/objects/Opportunity_Product_Item__c/recordTypes/SE_Opportunity_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>SE_Opportunity_Product_Item</fullName>
    <active>true</active>
    <label>SE Opportunity Product Item</label>
</RecordType>