force-app/main/default/objects/Opportunity_Product_Item__c/recordTypes/UK_Opportunity_Product_Item.recordType-meta.xml
<RecordType>
    <fullName>UK_Opportunity_Product_Item</fullName>
    <active>true</active>
    <label>UK Opportunity Product Item</label>
</RecordType>